refactor: Simplify condition checks and improve null safety in approval